[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-simulation"

version="0.0.0"

authors=[
    {name="TODO", email="TODO@gmail.com"},
]

description="Social Simulation"

readme="README.md"

requires-python=">=3.9"

keywords=[
    "LLM",
    "agent",
    "social-network",
    "graph",
    "recommendation-system",
]

dependencies=[
    "camel-ai==0.1.5.3",
    "pandas==2.2.2",
    "networkx==3.3",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pillow==10.3.0",
    "unstructured==0.13.7",
    "sentence-transformers==3.0.0",
]

[project.urls]
repository="https://github.com/camel-ai/social-simulation.git"
